@@ -49,6 +49,7 @@
 * Fixed:  Release task's regexp to find either THIS_VERSION and VERSION_NUMBER.
 * Fixed:  BUILDR-138 ScalaTest premature use of Buildr::Repositories
           inconsistent with customizing locations.
+* Fixed:  Project.task fails when task name starts with a colon.
 * Docs:   BUILDR-111 Troubleshoot tip when Buildr's bin directory shows up in
           RUBYLIB (Geoffrey Ruscoe).
 
